@@ -143,9 +143,6 @@ class BinHex:
         if isinstance(ofp, str):
             ofname = ofp
             ofp = io.open(ofname, 'wb')
-            if os.name == 'mac':
-                fss = FSSpec(ofname)
-                fss.SetCreatorType('BnHq', 'TEXT')
         ofp.write(b'(This file must be converted with BinHex 4.0)\r\r:')
         hqxer = _Hqxcoderengine(ofp)
         self.ofp = _Rlecoderengine(hqxer)
@@ -446,9 +443,6 @@ def hexbin(inp, out):
     finfo = ifp.FInfo
     if not out:
         out = ifp.FName
-    if os.name == 'mac':
-        ofss = FSSpec(out)
-        out = ofss.as_pathname()
 
     ofp = io.open(out, 'wb')
     # XXXX Do translation on non-mac systems
@@ -468,12 +462,5 @@ def hexbin(inp, out):
             if not d: break
             ofp.write(d)
         ofp.close()
-
-    if os.name == 'mac':
-        nfinfo = ofss.GetFInfo()
-        nfinfo.Creator = finfo.Creator
-        nfinfo.Type = finfo.Type
-        nfinfo.Flags = finfo.Flags
-        ofss.SetFInfo(nfinfo)
 
     ifp.close()
