@@ -63,6 +63,8 @@ C-API
 Library
 -------
 
+- Issue #2715: Remove remnants of Carbon.File from binhex module.
+
 - Issue #6595: The Decimal constructor now allows arbitrary Unicode
   decimal digits in input, as recommended by the standard.  Previously
   it was restricted to accepting [0-9].
